# ashfall

./: .gitignore  FIXLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: taxonomy.yaml
configs/ablations/failure_modes/: all_modes.yaml  command_mismatch_only.yaml  severe_only.yaml  slip_only.yaml  (+2 more)
configs/experiments/: ablation_sweep.yaml  adapted.yaml  baseline.yaml  control_random.yaml  failure_modes_pilot_2026-05-08.yaml  multiseed_pilot_2026-05-07.yaml  multiseed_scale_2026-05-07.yaml  multiseed_scale_ext_2026-06-02.yaml
docs/experiments/: 2026-05-07-failure-mode-ablation-plan.md
docs/methodology/: 2026-05-07-ff-sweep-rigor.md  ff_sweep_rigor.md
notes/: 2026-05-07-multiseed-scale-verdict.md  2026-05-07-multiseed-verdict.md  2026-05-07-seed-propagation-audit.md  2026-05-07-sweep-verification.md  2026-05-08-failure-modes-pilot-verdict.md  2026-05-08-failure-modes-propagation-audit.md  2026-05-09-curriculum-redesign-spike.md
results/: REPORT.md  multiseed_n11_scale_verdict.md  multiseed_scale_ext_2026-06-02_ANALYSIS.md
scripts/: _activate.sh  analyze.sh  generate_failures.sh  render_multiseed_scale_verdict.py  render_multiseed_verdict.py  run_ablation.sh  run_experiment.sh  run_failure_modes_ablation.sh  run_failure_modes_pilot.sh  run_full_experiment.sh  run_multiseed_pilot.sh  run_multiseed_scale.sh  run_sweep_v030.sh
src/ashfall/: __init__.py
tests/: test_analysis.py  test_evaluation.py  test_experiment.py  test_mode_subsets.py  test_multiseed.py  test_multiseed_combined.py  test_significance.py  test_synth.py  test_taxonomy.py
(+105 files in other folders)
