[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashfall"
version = "0.1.0"
description = "Failure-driven robot learning for the Unitree GO2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yusuf Guenena", email = "yusuf.a.guenena@gmail.com"}]

dependencies = [
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
sim = [
    "torch>=2.1",
    "tensorboard",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "sim: requires Isaac Lab (deselect with -m 'not sim')",
]

[tool.black]
line-length = 100
target-version = ["py310"]
